Target Paper API
There is still work to be done to use Paperweight for NMS, but then it remains to be determined if NMS is even necessary for the future.