@@ -28,10 +28,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <release>8</release>
+          <release>21</release>
           <compilerArgs>
-            <!-- Suppress warning about JDK 1.8 being deprecated -->
-            <arg>-Xlint:-options</arg>
+            <arg>-proc:full</arg>
           </compilerArgs>
         </configuration>
       </plugin>
@@ -90,10 +89,6 @@
               <shadedPattern>me.deadlight.ezchestshop.internal.minedown</shadedPattern>
             </relocation>
             <relocation>
-              <pattern>net.kyori</pattern>
-              <shadedPattern>me.deadlight.ezchestshop.internal.kyori</shadedPattern>
-            </relocation>
-            <relocation>
               <pattern>com.zaxxer.hikari</pattern>
               <shadedPattern>me.deadlight.ezchestshop.internal.hikari</shadedPattern>
             </relocation>
@@ -127,20 +122,17 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.spigotmc</groupId>
-      <artifactId>spigot</artifactId>
-      <version>1.16.5-R0.1-SNAPSHOT</version>
+      <groupId>io.papermc.paper</groupId>
+      <artifactId>paper-api</artifactId>
+      <version>1.21.4-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>com.google.code.gson</groupId>
-          <artifactId>gson</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-        </exclusion>
-      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <!-- Bundled with Minecraft. Keep version in sync. -->
+      <version>2.24.1</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.bstats</groupId>
@@ -161,16 +153,8 @@
       <scope>compile</scope>
       <exclusions>
         <exclusion>
-          <groupId>org.jetbrains</groupId>
-          <artifactId>annotations</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>com.google.code.gson</groupId>
-          <artifactId>gson</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>com.google.auto.service</groupId>
-          <artifactId>auto-service-annotations</artifactId>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
